[tool.poetry]
name = "svpetrakov_brain_games"
version = "0.1.1"
description = "Игры разума, первый проект"
authors = ["Sergei <sv.petrakov@yandex.ru>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[[tool.poetry.source]]
name = "test_pypi"
url = "https://test.pypi.org/legacy/"