[tool.poetry]
name = "svpetrakov_brain_games"
version = "0.1.4"
description = "Игры разума, первый проект"
authors = ["Sergei <sv.petrakov@yandex.ru>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
flake8 = "^3.7.9"


[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"

[[tool.poetry.source]]
name = "test_pypi"
url = "https://test.pypi.org/legacy/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

