[tool.poetry]
name = "svpetrakov_brain_games"
version = "0.1.10"
description = "Игры разума, первый проект"
authors = ["Sergei <sv.petrakov@yandex.ru>"]
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/svpetrakov/python-project-lvl1"
classifiers = [
    "Topic :: Other/Nonlisted Topic",
    "Development Status :: 4 - Beta",
	"License :: Freeware",
	"Programming Language :: Python",
	"Operating System :: POSIX",
	"Environment :: Console",
	"Intended Audience :: Education",
	"Natural Language :: English"
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
flake8 = "^3.7.9"


[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[[tool.poetry.source]]
name = "test_pypi"
url = "https://test.pypi.org/legacy/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

